--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,87 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
 body {
-    background: #fff;
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+:focus {
+    outline: 0;
+}
+ins {
+    text-decoration: none;
+}
+del {
+    text-decoration: line-through;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* Reset */
+
+body {
+    background: #1a110e;
     border-radius: 16px;
-    max-width: 480px;
+    width: 400px;
+    height: 500px;
+    font-family: Roboto;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+}
+
+button {
+    display: flex;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    background: #FFBB9F;
+    border: none;
+    padding: 12px 24px 12px 16px;
+    font-family: Roboto;
+    font-weight: 500;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 16px;
+}
+button img {
+    width: 20px;
+}
+
+button:hover {
+    background: #ffc0a7;
+}
+
+button:active {
+    background: #ffc3ab;
 }
