--- a/popup.css
+++ b/popup.css
@@ -47,6 +47,7 @@ table {
 
 body {
     background: #1a110e;
+    color: #fff9f8;
     border-radius: 16px;
     width: 400px;
     height: 500px;
@@ -57,7 +58,7 @@ body {
     font-size: 14px;
 }
 
-button {
+button, .connect-button{
     display: flex;
     height: 40px;
     justify-content: center;
@@ -67,21 +68,25 @@ button {
     border-radius: 100px;
     background: #FFBB9F;
     border: none;
-    padding: 12px 24px 12px 16px;
+    padding: 16px 24px 16px 16px;
     font-family: Roboto;
     font-weight: 500;
     margin-top: auto;
     margin-bottom: auto;
     font-size: 16px;
+    color: #2d0b00;
+    text-decoration: none;
+    box-sizing: border-box;
+    height: 48px;
 }
-button img {
+.connect-button img {
     width: 20px;
 }
 
-button:hover {
+button:hover, .connect-button:hover {
     background: #ffc0a7;
 }
 
-button:active {
+button:active .connect-button:active{
     background: #ffc3ab;
 }
