--- a/popup.css
+++ b/popup.css
@@ -46,7 +46,7 @@ table {
 /* Reset */
 
 body {
-    background: #1a110e;
+    background: #05070b;
     color: #fff9f8;
     border-radius: 16px;
     width: 400px;
@@ -60,18 +60,21 @@ body {
 label {
     display: block;
     margin-bottom: 5px;
-    color: #dcc6be;
+    color: #b7b8c4;
+    font-size: 14px;
     
 }
 
-input {
-    background-color: #3d322e;
-    color:white;
-    padding: 8px;
-    border-radius: 10px;
+input, select {
+    background-color: #111317;
+    color: #b7b8c4;
+    padding: 12px 8px;
+    height: 48px;
+    border-radius: 8px;
+    border: 2px solid #2A2B3C;
+    background: #111317;    
     width: 100%;
     box-sizing: border-box;
-    border:none;
 }
 
 h1{
@@ -82,44 +85,34 @@ h1{
     color: #FFF9F8;
 }
 
-button, .connect-button{
+button {
     display: flex;
-    height: 40px;
+    height: 48px;
     justify-content: center;
     align-items: center;
     gap: 8px;
     flex-shrink: 0;
-    border-radius: 100px;
-    background: #FFBB9F;
+    border-radius: 8px;
+    background: #3930e3;
     border: none;
-    padding: 16px 24px 16px 16px;
+    padding: 8px 24px;
     font-family: Roboto;
     font-weight: 500;
-    margin-top: auto;
-    margin-bottom: auto;
     font-size: 16px;
-    color: #2d0b00;
+    color: #ffffff;
     text-decoration: none;
     box-sizing: border-box;
-    height: 48px;
-}
-.connect-button img {
-    width: 20px;
+    width: 100%;
 }
 
 button:hover, .connect-button:hover {
-    background: #ffc0a7;
-}
-
-button:active .connect-button:active{
-    background: #ffc3ab;
+    background: #4f47e3;
 }
 
 .cnt {
     width: 100%;
     padding: 0 20px;
     box-sizing: border-box;
-
 }
 form {
     width: 100%;
@@ -127,11 +120,13 @@ form {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    margin-top: 40px;
+    padding-bottom: 80px;
 }
 .form-group {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 8px;
 }
 .mini-profile {
     width: 100%;
@@ -149,4 +144,69 @@ form {
 .mini-profile__user-name {
     margin-top: auto;
     margin-bottom: auto;
+}
+
+.button-cnt {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 0;
+    margin: 0;
+}
+
+#deleteButton {
+    color: #ba1a1a;
+    background: transparent;
+    border: #ba1a1a 2px solid;
+}
+
+#deleteButton:hover {
+    background: #ba1a1a;
+    color: white;
+}
+
+.data-cnt {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(5, 7, 11, 0.9);
+    backdrop-filter: blur(8px);
+    padding: 8px 16px;
+    align-items: center;
+    gap: 16px;
+}
+
+.icon-button {
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    display: flex;
+    width: 80px;
+    height: 56px;
+    padding: 8px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 104px;
+    background: #05070B;
+}
+
+.icon-button:hover {
+    background: #191B1F;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 300,
+  'GRAD' 0,
+  'opsz' 24
 }
