--- a/popup.css
+++ b/popup.css
@@ -77,6 +77,11 @@ input, select {
     box-sizing: border-box;
 }
 
+input:focus, select:focus {
+    outline: 3px #43aefd solid;
+}
+
+
 h1{
     margin-top: 10px;
     margin-top: 20px;
