--- a/popup.css
+++ b/popup.css
@@ -286,16 +286,8 @@ h4 {
 }
 
 .input_dynamic {
-    background-color: #111317;
-    background: #111317; 
-    color: #b7b8c4;
     flex-grow: 1;
-    padding: 8px;
-    font-size: 14px;
-    border-radius: 4px;
-    border: 2px solid #2A2B3C; 
     margin-right: 10px;
-    border: 2px solid #2A2B3C;
 }
 
 .delete_button {
@@ -313,4 +305,84 @@ h4 {
 .delete_button:hover {
     background: #ba1a1a;
     color: white;
+}
+
+table {
+    width: 100%;
+    color: white;
+    border-collapse: collapse;
+    box-shadow: inset 0 0 0 2px #2a2b3c;
+    margin-bottom: 140px;  
+    font-family: Roboto;
+    margin-top: 40px;
+    table-layout: fixed;
+}
+#historyTable th:nth-child(1),
+#historyTable td:nth-child(1) {
+    width: 25%;
+}
+
+#historyTable th:nth-child(2),
+#historyTable td:nth-child(2) {
+    width: 20%; /* Second column (Job Title) takes 40% */
+}
+
+#historyTable th:nth-child(3),
+#historyTable td:nth-child(3) {
+    width: 20%; /* Third column (Date Applied) takes 15% */
+}
+
+#historyTable th:nth-child(4),
+#historyTable td:nth-child(4) {
+    width: 35%; /* Fourth column (Status) takes 15% */
+}
+
+
+thead,
+tfoot {
+  background-color: #111317;
+  text-align: left;
+}
+
+th,
+td {
+  border: 1px solid #2a2b3c;
+  padding: 8px 10px;
+  overflow: scroll;
+}
+
+a {
+    color: #43aefd;
+    text-decoration: none;
+}
+
+.home-cnt.active {
+    display: block;
+}
+
+.home-cnt {
+    display: none;
+}
+
+.history-cnt {
+    display: none;
+}
+
+.history-cnt.active {
+    display: block;
+}
+
+.icon-button.active {
+    background: #191B1F;
+}
+.material-symbols-outlined.active {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 24
+  }
+  
+input:focus, select:focus {
+    outline: 3px #43aefd solid;
 }
